--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-	"as3mxml.sdk.framework": "c:\\Users\\bravo\\Downloads\\AIRSDK_Flex_Windows"
+	"as3mxml.sdk.framework": "c:\\Users\\bravo\\Downloads\\AIRSDK_Windows"
 }
